[package]
name = "parallel_map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"

[dev-dependencies]
tokio = { version = "1.17.0", features = ["rt", "macros"] }
rand = "0.8.5"
rand_pcg = "0.3.1"